[gd_scene load_steps=23 format=2]

[ext_resource path="res://ui/ButtonStylePressed2.tres" type="StyleBox" id=1]
[ext_resource path="res://ui/ButtonStyleBase2.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/ButtonStyleDisabled2.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/ButtonStyleHover2.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/m6x11.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://wheel/wheel.png" type="Texture" id=6]
[ext_resource path="res://ui/mainmenu/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://Arena/tilemaps/ground.png" type="Texture" id=8]
[ext_resource path="res://Arena/tiles/pillar_full.png" type="Texture" id=9]
[ext_resource path="res://ui/mainmenu/Main_menu.wav" type="AudioStream" id=10]
[ext_resource path="res://ui/mainmenu/fade.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 4
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.729412, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.415686, 0.568627, 0.568627, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.486275, 0.447059, 0.447059, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 96
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=10]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/fade:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 568, -4680 ), Vector2( 568, 3104 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=11]
length = 60.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("ground:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 692, 304 ), Vector2( 410, 304 ), Vector2( 692, 304 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pillar_full:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 30, 60 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 460, 520 ), Vector2( 178, 520 ), Vector2( 460, 520 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ground" type="Sprite" parent="."]
position = Vector2( 692, 304 )
scale = Vector2( 3.44922, 3.44922 )
texture = ExtResource( 8 )

[node name="pillar_full" type="Sprite" parent="."]
position = Vector2( 460, 520 )
scale = Vector2( 4, 4 )
texture = ExtResource( 9 )

[node name="wheel" type="Sprite" parent="."]
position = Vector2( 820, 496 )
rotation = 0.189564
scale = Vector2( 6, 6 )
texture = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fade" type="Sprite" parent="CanvasLayer"]
position = Vector2( 568, -4680 )
scale = Vector2( 20.73, 25.2133 )
texture = ExtResource( 11 )
flip_h = true

[node name="lblTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -428.0
margin_top = 48.0
margin_right = 428.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Radiation Roulette"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStart" type="Button" parent="."]
margin_left = 132.0
margin_top = 228.0
margin_right = 436.0
margin_bottom = 364.0
focus_mode = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnQuit" type="Button" parent="."]
margin_left = 40.0
margin_top = 380.0
margin_right = 344.0
margin_bottom = 516.0
focus_mode = 0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 10 )
anims/move_bg = SubResource( 11 )
[connection signal="pressed" from="btnStart" to="." method="_on_btnStart_pressed"]
[connection signal="pressed" from="btnQuit" to="." method="_on_btnQuit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
